--- a/Hect/Tests/UnitTests/UnitTests.vcxproj
+++ b/Hect/Tests/UnitTests/UnitTests.vcxproj
@@ -166,7 +166,7 @@
     <ClInclude Include="Source\MemoryStreamTests.h" />
     <ClInclude Include="Source\DataValueTests.h" />
     <ClInclude Include="Source\FrustumTests.h" />
-    <ClInclude Include="Source\DataJsonFormatTests.h" />
+    <ClInclude Include="Source\DataValueJsonFormatTests.h" />
     <ClInclude Include="Source\Matrix4Tests.h" />
     <ClInclude Include="Source\MeshBuilderTests.h" />
     <ClInclude Include="Source\MeshDataFormatTests.h" />
