--- a/SolidBlack/Deploy/Settings.json
+++ b/SolidBlack/Deploy/Settings.json
@@ -1,16 +1,14 @@
 {
     "videoMode" :
     {
-        "width" : 256,
-        "height" : 256,
+        "width" : 1280,
+        "height" : 900,
         "bitsPerPixel" : 32,
         "fullscreen" : false
     },
     "dataSources" :
     [
-        "Common",
-        "Client",
-        "Server"
+        "Client"
     ],
     "inputAxes" :
     {
