--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -57,33 +57,33 @@
     <ClCompile Include="Source\Graphics\ImageLoader.cpp" />
     <ClCompile Include="Source\Graphics\ImagePngFormat.cpp" />
     <ClCompile Include="Source\Graphics\Material.cpp" />
-    <ClCompile Include="Source\Graphics\MaterialDataFormat.cpp" />
+    <ClCompile Include="Source\Graphics\MaterialDataValueFormat.cpp" />
     <ClCompile Include="Source\Graphics\MaterialLoader.cpp" />
     <ClCompile Include="Source\Graphics\Mesh.cpp" />
     <ClCompile Include="Source\Graphics\MeshWriter.cpp" />
-    <ClCompile Include="Source\Graphics\MeshDataFormat.cpp" />
+    <ClCompile Include="Source\Graphics\MeshDataValueFormat.cpp" />
     <ClCompile Include="Source\Graphics\MeshLoader.cpp" />
     <ClCompile Include="Source\Graphics\Pass.cpp" />
     <ClCompile Include="Source\Graphics\PassUniformValue.cpp" />
     <ClCompile Include="Source\Graphics\RenderMode.cpp" />
     <ClCompile Include="Source\Graphics\RenderTarget.cpp" />
     <ClCompile Include="Source\Graphics\VideoMode.cpp" />
-    <ClCompile Include="Source\Graphics\VideoModeDataFormat.cpp" />
+    <ClCompile Include="Source\Graphics\VideoModeDataValueFormat.cpp" />
     <ClCompile Include="Source\Graphics\Window.cpp" />
     <ClCompile Include="Source\Graphics\Shader.cpp" />
-    <ClCompile Include="Source\Graphics\ShaderDataFormat.cpp" />
+    <ClCompile Include="Source\Graphics\ShaderDataValueFormat.cpp" />
     <ClCompile Include="Source\Graphics\ShaderLoader.cpp" />
     <ClCompile Include="Source\Graphics\ShaderModule.cpp" />
     <ClCompile Include="Source\Graphics\ShaderModuleLoader.cpp" />
     <ClCompile Include="Source\Graphics\Technique.cpp" />
     <ClCompile Include="Source\Graphics\Texture.cpp" />
-    <ClCompile Include="Source\Graphics\TextureDataFormat.cpp" />
+    <ClCompile Include="Source\Graphics\TextureDataValueFormat.cpp" />
     <ClCompile Include="Source\Graphics\TextureLoader.cpp" />
     <ClCompile Include="Source\Graphics\Uniform.cpp" />
     <ClCompile Include="Source\Graphics\UniformValue.cpp" />
     <ClCompile Include="Source\Graphics\VertexAttribute.cpp" />
     <ClCompile Include="Source\Graphics\VertexLayout.cpp" />
-    <ClCompile Include="Source\Input\InputAxisDataFormat.cpp" />
+    <ClCompile Include="Source\Input\InputAxisDataValueFormat.cpp" />
     <ClCompile Include="Source\Input\InputSystem.cpp" />
     <ClCompile Include="Source\Input\InputAxis.cpp" />
     <ClCompile Include="Source\Input\Keyboard.cpp" />
@@ -145,29 +145,29 @@
     <ClInclude Include="Source\Graphics\Image.h" />
     <ClInclude Include="Source\Graphics\ImagePngFormat.h" />
     <ClInclude Include="Source\Graphics\Material.h" />
-    <ClInclude Include="Source\Graphics\MaterialDataFormat.h" />
+    <ClInclude Include="Source\Graphics\MaterialDataValueFormat.h" />
     <ClInclude Include="Source\Graphics\Mesh.h" />
     <ClInclude Include="Source\Graphics\MeshWriter.h" />
-    <ClInclude Include="Source\Graphics\MeshDataFormat.h" />
+    <ClInclude Include="Source\Graphics\MeshDataValueFormat.h" />
     <ClInclude Include="Source\Graphics\Pass.h" />
     <ClInclude Include="Source\Graphics\PassUniformValue.h" />
     <ClInclude Include="Source\Graphics\RenderMode.h" />
     <ClInclude Include="Source\Graphics\RenderTarget.h" />
     <ClInclude Include="Source\Graphics\VideoMode.h" />
-    <ClInclude Include="Source\Graphics\VideoModeDataFormat.h" />
+    <ClInclude Include="Source\Graphics\VideoModeDataValueFormat.h" />
     <ClInclude Include="Source\Graphics\Window.h" />
     <ClInclude Include="Source\Graphics\Shader.h" />
-    <ClInclude Include="Source\Graphics\ShaderDataFormat.h" />
+    <ClInclude Include="Source\Graphics\ShaderDataValueFormat.h" />
     <ClInclude Include="Source\Graphics\ShaderModule.h" />
     <ClInclude Include="Source\Graphics\Technique.h" />
     <ClInclude Include="Source\Graphics\Texture.h" />
-    <ClInclude Include="Source\Graphics\TextureDataFormat.h" />
+    <ClInclude Include="Source\Graphics\TextureDataValueFormat.h" />
     <ClInclude Include="Source\Graphics\Uniform.h" />
     <ClInclude Include="Source\Graphics\UniformValue.h" />
     <ClInclude Include="Source\Graphics\VertexAttribute.h" />
     <ClInclude Include="Source\Graphics\VertexLayout.h" />
     <ClInclude Include="Source\Hect.h" />
-    <ClInclude Include="Source\Input\InputAxisDataFormat.h" />
+    <ClInclude Include="Source\Input\InputAxisDataValueFormat.h" />
     <ClInclude Include="Source\Input\InputSystem.h" />
     <ClInclude Include="Source\Input\InputAxis.h" />
     <ClInclude Include="Source\Input\Keyboard.h" />
