--- a/Hect/Hect.vcxproj.filters
+++ b/Hect/Hect.vcxproj.filters
@@ -282,12 +282,6 @@
     <ClCompile Include="Source\Entity\EntityData.cpp">
       <Filter>Source\Entity</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Entity\ComponentWriter.cpp">
-      <Filter>Source\Entity</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Entity\ComponentReader.cpp">
-      <Filter>Source\Entity</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Core\DataValueJsonFormat.cpp">
       <Filter>Source\Core</Filter>
     </ClCompile>
@@ -314,6 +308,12 @@
     </ClCompile>
     <ClCompile Include="Source\Graphics\MeshDataValueFormat.cpp">
       <Filter>Source\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\IO\DataReader.cpp">
+      <Filter>Source\IO</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\IO\DataWriter.cpp">
+      <Filter>Source\IO</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -563,12 +563,6 @@
     <ClInclude Include="Source\Entity\EntityData.h">
       <Filter>Source\Entity</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Entity\ComponentWriter.h">
-      <Filter>Source\Entity</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Entity\ComponentReader.h">
-      <Filter>Source\Entity</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Core\DataValueJsonFormat.h">
       <Filter>Source\Core</Filter>
     </ClInclude>
@@ -595,6 +589,12 @@
     </ClInclude>
     <ClInclude Include="Source\Graphics\MeshDataValueFormat.h">
       <Filter>Source\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\IO\DataReader.h">
+      <Filter>Source\IO</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\IO\DataWriter.h">
+      <Filter>Source\IO</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
