--- a/SolidBlack/SolidBlack.vcxproj
+++ b/SolidBlack/SolidBlack.vcxproj
@@ -19,21 +19,21 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\LogicLayers\TestLogicLayer.cpp" />
     <ClCompile Include="Source\Network\Client.cpp" />
     <ClCompile Include="Source\Network\Player.cpp" />
     <ClCompile Include="Source\Network\Server.cpp" />
-    <ClCompile Include="Source\States\TestState.cpp" />
     <ClCompile Include="Source\Systems\DebugCameraSystem.cpp" />
     <ClCompile Include="Source\Systems\RenderingSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Components\DebugCamera.h" />
+    <ClInclude Include="Source\LogicLayers\TestLogicLayer.h" />
     <ClInclude Include="Source\Network\Client.h" />
     <ClInclude Include="Source\Network\PacketType.h" />
     <ClInclude Include="Source\Network\Player.h" />
     <ClInclude Include="Source\Network\Server.h" />
     <ClInclude Include="Source\SolidBlack.h" />
-    <ClInclude Include="Source\States\TestState.h" />
     <ClInclude Include="Source\Systems\DebugCameraSystem.h" />
     <ClInclude Include="Source\Systems\RenderingSystem.h" />
   </ItemGroup>
