--- a/Hect/Hect.vcxproj.filters
+++ b/Hect/Hect.vcxproj.filters
@@ -309,7 +309,10 @@
     <ClCompile Include="Source\IO\DataWriter.cpp">
       <Filter>Source\IO</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Core\Logic.cpp">
+    <ClCompile Include="Source\Core\LogicLayer.cpp">
+      <Filter>Source\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Core\LogicFlow.cpp">
       <Filter>Source\Core</Filter>
     </ClCompile>
   </ItemGroup>
@@ -587,10 +590,10 @@
     <ClInclude Include="Source\IO\DataWriter.h">
       <Filter>Source\IO</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Core\Logic.h">
+    <ClInclude Include="Source\Core\LogicLayer.h">
       <Filter>Source\Core</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Core\LogicLayer.h">
+    <ClInclude Include="Source\Core\LogicFlow.h">
       <Filter>Source\Core</Filter>
     </ClInclude>
   </ItemGroup>
