Working on client/server model.

--- a/SolidBlack/Deploy/Settings.json
+++ b/SolidBlack/Deploy/Settings.json
@@ -8,7 +8,9 @@
     },
     "dataSources" :
     [
-        "Client"
+        "Common",
+        "Client",
+        "Server"
     ],
     "inputAxes" :
     {
